--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore sunt rem quos eligendi ullam iure culpa vitae doloremque unde. In ea neque eius deserunt eveniet!</p>
-</body>
+    <h1>Naga</h1>
+    </body>
 </html>
